sections FPOO; HARE e LIMA finalizadas

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ html{
     scroll-behavior: smooth;
 }
 
+:target {
+    scroll-margin-top: 115px;
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -132,12 +136,12 @@ main h1{
     font-family: 'Ubuntu', sans-serif;
     font-size: 45px;
 }
-main h2{
+main h2, h3{
     font-family: 'Ubuntu', sans-serif;
     font-size: 25px;
     padding-top: 10px;
 }
-main p{
+main p, li{
     font-family: 'Roboto Mono', monospace;
     font-size: 15px;
 }
@@ -158,6 +162,55 @@ main p{
     box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
 }
 
+.fpooTxt{
+    display: flex;
+    flex-direction: row;
+}
+.fpooTxt img{
+    width: 55px;
+    margin-left: 25px;
+    margin-right: 50px;
+}
+.fpooTxt p{
+    padding-top: 20px;
+    text-align: right;
+}
+
+.fpooBottom{
+    display: flex;
+    flex-direction: row;
+}
+
+.fpooTxt2{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.fpooTxt2 h3{
+    margin-top: 35px;
+}
+.fpooTxt2 li{
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+.fpooTxt2 p{
+    margin-top: 35px;
+    text-align: left;
+}
+
+.fpooProjeto{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.fpooProjeto h3{
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+.fpooProjeto img{
+    width: 500px;
+}
 /*-------------------------------------------------------------------------------------------------------------*/
 
 .lima{
@@ -197,10 +250,10 @@ main p{
     flex-direction: row;
 }
 .limaProjetos img{
-    width: 400px;
+    width: 300px;
     box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.5);
 }
-.limaProjeto1, .limaProjeto2{
+.limaProjeto1, .limaProjeto2, .limaProjeto3{
     padding-left: 40px;
     padding-right: 40px;
     padding-top: 10px;
@@ -224,14 +277,19 @@ main p{
 
 .videosSop{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     padding-top: 40px; padding-bottom: 10px;
-    width: 90vw;
     justify-content: space-between;
 }
+.videosSop p{
+    margin-left: 25px;
+}
 .videoSop1, .videoSop2, .videoSop3{
-    width: 350px;
+    display: flex;
+    flex-direction: row;
+    margin: 25px;
+    align-items: center;
 }
 
 /*-------------------------------------------------------------------------------------------------------------*/
@@ -243,7 +301,6 @@ main p{
     margin-top: 40px;
     border-radius: 30px;
     margin: 75px;
-    margin-top: 100px; margin-bottom: 100px;
     padding: 20px;
     text-align: center;
     background-color: #01948B;
